--- a/src/styles/bloks/button.scss
+++ b/src/styles/bloks/button.scss
@@ -25,7 +25,37 @@
     width: 264px;
   }
 
-  &--indent {
-    margin-bottom: 48px;
-  }
+  // &--indent {
+  //   margin-bottom: 48px;
+  // }
+
+    &__hire-us {
+      position: relative;
+      font-family: "Poppins", sans-serif;
+      font-weight: 700;
+      font-size: 13px;
+      line-height: 150%;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: $colorWhite;
+      border: none;
+      background-color: transparent;
+      transition: 0.2s linear;
+      cursor: pointer;
+
+      &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        margin-top: 8px;
+        width: 80%;
+        height: 2px;
+        background-color: #2060f6;
+        border-radius: 4px;
+      }
+
+      &:hover {
+        color: #2060f6;
+      }
+    }
 }
