--- a/src/styles/bloks/slider.scss
+++ b/src/styles/bloks/slider.scss
@@ -1,5 +1,19 @@
 .slider {
+  position: absolute;
+  right: 0;
+  left: 0;
+  height: 390px;
+  border-radius: 30px;
   overflow: hidden;
+
+  @include onSmallDesktop {
+    top: auto;
+    bottom: 0;
+    right: 0;
+    left: 50%;
+    height: 680px;
+    border-radius: 30px 0;
+  }
 
   &__box {
     height: 100%;
