--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,10 @@
 @import "./bloks/page.scss";
 @import "./bloks/header.scss";
 @import "./bloks/menu.scss";
-@import "./bloks/icon.scss";
+@import "./bloks/logo.scss";
 @import "./bloks/container.scss";
 @import "./bloks/nav.scss";
+@import "./bloks/strategic.scss";
 @import "./bloks/button.scss";
 @import "./bloks/slider.scss";
 @import "./bloks/about.scss";
